# CPlayGround

./: CMakeLists.txt  Common.c  Common.h  README.md  client.c  client.h  driver.c  driver.mod.c  file.c  file.h  main.c  main_client.c  main_signal.c  main_testclientlib.c  main_webserver.c  network_shot.c  server.c  server.h  server_command.c  server_command.h  server_msg_container.c  server_msg_container.h  webserver.c  webserver.h
include/: Common.h  network_common.h  network_shot.h
include/clientlib/: clientlib.h
server/: server.c  server.h  server_command.c  server_command.h  server_data.h
server/data_section/: data_section_main.c  data_section_main.h  server_data_defines.h
server/data_section/msg_container/: server_msg_container.h
